--- a/Gradio_app.ipynb
+++ b/Gradio_app.ipynb
@@ -38,9 +38,19 @@
    "execution_count": 3,
    "id": "29e3ddc4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/rconsole/.local/lib/python3.10/site-packages/torch/_utils.py:831: UserWarning: TypedStorage is deprecated. It will be removed in the future and UntypedStorage will be the only storage class. This should only matter to you if you are using storages directly.  To access UntypedStorage directly, use tensor.untyped_storage() instead of tensor.storage()\n",
+      "  return self.fget.__get__(instance, owner)()\n"
+     ]
+    }
+   ],
    "source": [
-    "from rag_utils import RAG, EmbeddingType, RagResponse"
+    "#from rag_utils import RAG, EmbeddingType, RagResponse\n",
+    "from rag_utils import RAG, EmbeddingType"
    ]
   },
   {
@@ -77,28 +87,18 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a3911738",
-   "metadata": {
-    "lines_to_next_cell": 1
-   },
-   "outputs": [],
-   "source": [
-    "VECTOR_STORES = {\n",
-    "    EmbeddingType.OPEN_AI: RAG(embedding_type=EmbeddingType.OPEN_AI),\n",
-    "    EmbeddingType.SENTENCE_TRANSFORMER: Chroma(persist_directory=\"./chroma_db\", embedding_function=OpenAIEmbeddings()),\n",
-    "    EmbeddingType.MISTRAL: Chroma(persist_directory=\"./chroma_db\", embedding_function=OpenAIEmbeddings()),\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "id": "c5b6a1ad",
    "metadata": {},
    "outputs": [],
    "source": [
     "class ChatBot:\n",
     "    \n",
+    "    VECTOR_STORES = {\n",
+    "        EmbeddingType.OPEN_AI: RAG(embedding_type=EmbeddingType.OPEN_AI),\n",
+    "        EmbeddingType.SENTENCE_TRANSFORMER: RAG(embedding_type=EmbeddingType.SENTENCE_TRANSFORMER),\n",
+    "        EmbeddingType.MISTRAL: RAG(embedding_type=EmbeddingType.MISTRAL),\n",
+    "    }\n",
+    "\n",
     "    store: Dict[Tuple[str, str], BaseChatMessageHistory] = {}\n",
     "\n",
     "    @staticmethod\n",
@@ -113,19 +113,19 @@
     "        # document_info = {k: base_info[k] for k in DOCUMENT_PROMPT.input_variables}\n",
     "        document_info = {\n",
     "            \"page_content\": doc.page_content,\n",
-    "            \"file_source\": \"data.pdf, page 5\",\n",
+    "            # \"file_source\": \"data.pdf, page 5\",\n",
     "        }\n",
     "        return DOCUMENT_PROMPT.format(**document_info)\n",
     "\n",
     "    @staticmethod\n",
     "    def combine_documents(docs, document_separator=\"\\n\\n\"):\n",
     "        doc_strings = [ChatBot.format_document(doc) for doc in docs]\n",
-    "        return document_separator.join(doc_strings)\n",
-    "\n",
+    "        context = document_separator.join(doc_strings)\n",
+    "        return context or \"No relevant context found.\"\n",
     "\n",
     "    @classmethod\n",
     "    def get_vector_store(cls, embedding_type: EmbeddingType) -> VectorStore:\n",
-    "        return VECTOR_STORES[embedding_type]\n",
+    "        return cls.VECTOR_STORES[embedding_type]\n",
     "\n",
     "    @classmethod\n",
     "    def construct_chain(cls, embedding_type: EmbeddingType, model_type: str):\n",
@@ -157,7 +157,6 @@
     "        #   question: str                       #\n",
     "        # OUTPUTS:                              #\n",
     "        #   context: str                        #\n",
-    "        #   standalone_question: str            #\n",
     "        #   chat_history: str                   #\n",
     "        #   question: str                       #\n",
     "        #########################################\n",
@@ -167,7 +166,6 @@
     "                | retriever\n",
     "                | cls.combine_documents\n",
     "            ),\n",
-    "            \"standalone_question\": lambda x: x[\"standalone_question\"],\n",
     "            \"chat_history\": lambda x: x[\"chat_history\"],\n",
     "            \"question\": lambda x: x[\"question\"]\n",
     "        }\n",
@@ -248,25 +246,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "438bdb9f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import uuid\n",
+    "\n",
     "user_config = {\n",
     "    \"user_id\": \"user_id\",\n",
-    "    \"conversation_id\": \"conversation_id\",\n",
+    "    \"conversation_id\": uuid.uuid4().hex,\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "e3f60fce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langfuse.callback import CallbackHandler"
    ]
   },
   {
@@ -274,6 +264,8 @@
    "id": "e31a6943-5f2a-4f68-8a3f-10bbdc9c54ad",
    "metadata": {},
    "source": [
+    "from langfuse.callback import CallbackHandler\n",
+    "\n",
     "trace = {\n",
     "    \"callbacks\": [\n",
     "        CallbackHandler(\n",
@@ -286,21 +278,38 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "160452e7-6aa0-4551-b984-22c799bbae66",
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0863c461-7c02-4206-8a93-a58bc01af297",
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (3967513453.py, line 17)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[16], line 17\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(message, end=\"\")\"\"\"\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
    "source": [
+    "ChatBot.store = {}\n",
     "while True:\n",
     "    # print history\n",
     "    history = ChatBot.get_session_history(user_config[\"user_id\"], user_config[\"conversation_id\"])\n",
-    "    print(history)\n",
+    "    print(f\"history = {history}\\n\\n\")\n",
     "\n",
     "    # get question\n",
     "    question = input(\"Enter your question: \")\n",
+    "    if question == \"exit\": break\n",
     "\n",
     "    # get chain\n",
     "    chain = ChatBot.get_chain(embedding_type=EmbeddingType.OPEN_AI, model_type=\"openai\")\n",
-    "    response = chain.invoke({\"question\": question}, config={\"configurable\": user_config})"
+    "    \n",
+    "    response = chain.stream({\"question\": question}, config={\"configurable\": user_config})\n",
+    "\n",
+    "    for message in response:\n",
+    "        print(message, end=\"\")"
    ]
   },
   {
@@ -323,41 +332,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "88b70983",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running on local URL:  http://127.0.0.1:7862\n",
-      "Running on public URL: https://328f42c1d06d9ad002.gradio.componentsoft.ai\n",
-      "\n",
-      "This share link expires in 168 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div><iframe src=\"https://328f42c1d06d9ad002.gradio.componentsoft.ai\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import gradio as gr\n",
     "\n",
