no-straming Gradio app works

--- a/Gradio_app.ipynb
+++ b/Gradio_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ce769a40",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "15f2d490",
    "metadata": {},
    "outputs": [],
@@ -35,19 +35,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "29e3ddc4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/rconsole/.local/lib/python3.10/site-packages/torch/_utils.py:831: UserWarning: TypedStorage is deprecated. It will be removed in the future and UntypedStorage will be the only storage class. This should only matter to you if you are using storages directly.  To access UntypedStorage directly, use tensor.untyped_storage() instead of tensor.storage()\n",
-      "  return self.fget.__get__(instance, owner)()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#from rag_utils import RAG, EmbeddingType, RagResponse\n",
     "from rag_utils import RAG, EmbeddingType"
@@ -55,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ddd455e2",
    "metadata": {},
    "outputs": [],
@@ -65,28 +56,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "963d54bc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "load_dotenv()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c5b6a1ad",
    "metadata": {},
    "outputs": [],
@@ -246,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "438bdb9f",
    "metadata": {},
    "outputs": [],
@@ -278,26 +258,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "0863c461-7c02-4206-8a93-a58bc01af297",
+   "cell_type": "raw",
+   "id": "5e2f25cd-0114-4e25-945c-a9b9be2db485",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (3967513453.py, line 17)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[16], line 17\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(message, end=\"\")\"\"\"\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
-     ]
-    }
-   ],
    "source": [
     "ChatBot.store = {}\n",
     "while True:\n",
     "    # print history\n",
     "    history = ChatBot.get_session_history(user_config[\"user_id\"], user_config[\"conversation_id\"])\n",
-    "    print(f\"history = {history}\\n\\n\")\n",
+    "    print(f\"\\n\\nHISTORY:\\n{repr(history)}\\n\\n\")\n",
     "\n",
     "    # get question\n",
     "    question = input(\"Enter your question: \")\n",
@@ -306,7 +275,7 @@
     "    # get chain\n",
     "    chain = ChatBot.get_chain(embedding_type=EmbeddingType.OPEN_AI, model_type=\"openai\")\n",
     "    \n",
-    "    response = chain.stream({\"question\": question}, config={\"configurable\": user_config})\n",
+    "    response = chain.invoke({\"question\": question}, config={\"configurable\": user_config})\n",
     "\n",
     "    for message in response:\n",
     "        print(message, end=\"\")"
@@ -355,41 +324,63 @@
     "    question = question\n",
     "    # get chain\n",
     "    chain = ChatBot.get_chain(embedding_type=EmbeddingType.OPEN_AI, model_type=\"openai\")\n",
-    "    #response = chain.invoke({\"question\": question}, config={\"configurable\": user_config} | trace)\n",
+    "    print(\"Chain setup finished\")\n",
     "    response = chain.invoke({\"question\": question}, config={\"configurable\": user_config})\n",
+    "    print(\"Chain invoke finished\")\n",
     "    ChatBot_history = ChatBot.get_session_history(user_config[\"user_id\"], user_config[\"conversation_id\"])\n",
+    "    print(\"Chain history get finished\")\n",
+    "    print(ChatBot_history)\n",
     "    history = []\n",
     "    for _, chat in ChatBot_history:\n",
-    "        \"\"\"print(_)\n",
-    "        print(chat)\n",
-    "        print(\"\\n\\n\\n\")\"\"\"\n",
-    "        for i, chat in enumerate(chat):\n",
-    "            print(f\"chat = {chat}\")\n",
+    "        print(f\"_ = {_}, chat = {chat}\")\n",
+    "        print(\"\\n\\n\\n\")\n",
+    "        for i, chat_str in enumerate(chat):\n",
+    "            print(f\"chat = {chat_str}\")\n",
     "            if i % 2 == 0:\n",
-    "                chat_str = str(chat)\n",
-    "                new_round = [chat_str[len(\"content='\"):-1]]\n",
-    "                history.append(new_round)\n",
-    "                print(f\"i={i}, text={new_round}, history={history}\")\n",
+    "                chat_str = str(chat_str)\n",
+    "                new_round = chat_str[len(\"content='\"):-1]\n",
+    "                history.append([new_round])\n",
+    "                print(f\"i={i}, text={new_round}, \\nhistory={history}\")\n",
     "            else:\n",
-    "                chat_str = str(chat)\n",
-    "                new_round = new_round.append(chat_str[len(\"content='\"):-1])\n",
+    "                chat_str = str(chat_str)\n",
+    "                #new_round = new_round.append(chat_str[len(\"content='\"):-1])\n",
+    "                new_round = chat_str[len(\"content='\"):-1]\n",
+    "                history[-1].append(new_round)\n",
+    "                print(f\"i={i}, text={new_round}, \\nhistory={history}\")\n",
     "\n",
-    "    #print(history)\n",
+    "    print(f\"\\nhistory={history}\")\n",
     "    return history, \"\" \n",
     "\n",
-    "\"\"\"def exec_prompt_streaming(chatbot, prompt, model_family = \"Mistral\", model=\"mistral-large\"):\n",
-    "    Prompt.set_system_prompt(system_prompt)\n",
-    "    Prompt.set_temperature(temperature)\n",
-    "    Prompt.set_max_tokens(max_tokens)\n",
-    "    Prompt.set_model(model_family, model)\n",
-    "    \n",
-    "    chat_history = chat_history or []\n",
-    "    chat_history.append([prompt, \"\"])\n",
-    "    stream = Prompt.exec_streaming(chat_history)\n",
-    "    for new_token in stream:\n",
-    "        if new_token is not None:\n",
-    "            chat_history[-1][1] += str(new_token)\n",
-    "        yield chat_history, \"\" \"\"\"\n",
+    "def exec_prompt_streaming(chatbot, question, model_family = \"Mistral\", model=\"mistral-large\"):\n",
+    "\n",
+    "    question = question\n",
+    "    # get chain\n",
+    "    chain = ChatBot.get_chain(embedding_type=EmbeddingType.OPEN_AI, model_type=\"openai\")\n",
+    "    print(\"Chain setup finished\")\n",
+    "    response = chain.invoke({\"question\": question}, config={\"configurable\": user_config})\n",
+    "    print(\"Chain invoke finished\")\n",
+    "    ChatBot_history = ChatBot.get_session_history(user_config[\"user_id\"], user_config[\"conversation_id\"])\n",
+    "    print(\"Chain history get finished\")\n",
+    "    history = []\n",
+    "    for _, chat in ChatBot_history:\n",
+    "        print(f\"_ = {_}, chat = {chat}\")\n",
+    "        print(\"\\n\\n\\n\")\n",
+    "        for i, chat_str in enumerate(chat):\n",
+    "            print(f\"chat = {chat_str}\")\n",
+    "            if i % 2 == 0:\n",
+    "                chat_str = str(chat_str)\n",
+    "                new_round = chat_str[len(\"content='\"):-1]\n",
+    "                history.append([new_round])\n",
+    "                print(f\"i={i}, text={new_round}, \\nhistory={history}\")\n",
+    "            else:\n",
+    "                chat_str = str(chat_str)\n",
+    "                #new_round = new_round.append(chat_str[len(\"content='\"):-1])\n",
+    "                new_round = chat_str[len(\"content='\"):-1]\n",
+    "                history[-1].append(new_round)\n",
+    "                print(f\"i={i}, text={new_round}, \\nhistory={history}\")\n",
+    "\n",
+    "    print(f\"\\nhistory={history}\")\n",
+    "    return history, \"\" \n",
     "\n",
     "gr.close_all()\n",
     "\n",
@@ -406,13 +397,12 @@
     "        max_tokens = gr.Slider(label=\"Max tokens\", minimum=100, maximum=2000, value=500, \n",
     "            info=\"Maximum number of generated tokens\")\"\"\"\n",
     "    with gr.Row():\n",
-    "        #chatbot=gr.Textbox(label=\"CompSoft_5G_RAG\", lines=10, max_lines=20, show_copy_button=True)\n",
     "        chatbot=gr.Chatbot(label=\"CompSoft_5G_RAG\", height=400, show_copy_button=True)\n",
     "    with gr.Row():\n",
     "        prompt = gr.Textbox(label=\"Question\", value=\"What is 5G?\")\n",
     "    with gr.Row():\n",
     "        submit_btn_nostreaming = gr.Button(\"Answer\")\n",
-    "        #submit_btn_streaming = gr.Button(\"Answer with streaming\")\n",
+    "        submit_btn_streaming = gr.Button(\"Answer with streaming\")\n",
     "        clear_btn = gr.ClearButton([prompt, chatbot])\n",
     "        #flag_btn = gr.Button(\"Flag\")\n",
     "    \n",
@@ -422,7 +412,7 @@
     "        model = list(modelfamilies_model_dict[modelfamily])\n",
     "        return gr.Dropdown(choices=model, value=model[0], interactive=True)\n",
     "\n",
-    "    #submit_btn_streaming.click(exec_prompt_streaming, inputs=[chatbot, prompt, modelfamily, model], outputs=[chatbot, prompt])\n",
+    "    submit_btn_streaming.click(exec_prompt_streaming, inputs=[chatbot, prompt, modelfamily, model], outputs=[chatbot, prompt])\n",
     "    submit_btn_nostreaming.click(exec_prompt, inputs=[chatbot, prompt, modelfamily, model], outputs=[chatbot, prompt])\n",
     "\n",
     "    #callback.setup([system_prompt, modelfamily, model, temperature, max_tokens, chatbot], \"flagged_data_points\")\n",
@@ -442,6 +432,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9e6dd492-fe68-4933-8599-389464c1eef2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92ee6213-284e-44e6-ab3b-568f4c21905c",
    "metadata": {},
    "outputs": [],
    "source": []
