Add offset for numbering of pages in vector db

--- a/Gradio_app.ipynb
+++ b/Gradio_app.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "88b70983",
    "metadata": {},
    "outputs": [
@@ -98,26 +98,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7867\n",
-      "Running on public URL: https://043cfe86d3630474f7.gradio.componentsoft.ai\n",
+      "Running on local URL:  http://127.0.0.1:7860\n",
+      "Running on public URL: https://ae815ff8c221df64a9.gradio.componentsoft.ai\n",
       "\n",
       "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
-       "<div><iframe src=\"https://043cfe86d3630474f7.gradio.componentsoft.ai\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"https://ae815ff8c221df64a9.gradio.componentsoft.ai\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -130,21 +120,16 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[app.py] Getting session history for Ericsson 160ddb60-aefa-4174-9c46-9da8ee464d6b\n",
-      "[app.py] Getting session history for Ericsson 160ddb60-aefa-4174-9c46-9da8ee464d6b\n",
-      "[app.py] Deleting session history for Ericsson 160ddb60-aefa-4174-9c46-9da8ee464d6b\n",
-      "[app.py] Getting session history for Ericsson 160ddb60-aefa-4174-9c46-9da8ee464d6b\n",
-      "[app.py] Getting session history for Ericsson 160ddb60-aefa-4174-9c46-9da8ee464d6b\n",
-      "[app.py] Getting session history for Ericsson 3850ef87-088e-4c5f-8e3e-077bf3208b00\n",
-      "[app.py] Getting session history for Ericsson 3850ef87-088e-4c5f-8e3e-077bf3208b00\n"
+      "/Users/tmskss/Development/rag-chatbot-demo/venv/lib/python3.10/site-packages/langchain_core/_api/beta_decorator.py:86: LangChainBetaWarning: The function `loads` is in beta. It is actively being worked on, so the API may change.\n",
+      "  warn_beta(\n"
      ]
     }
    ],
