--- a/Gradio_app.ipynb
+++ b/Gradio_app.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "ce769a40",
+   "execution_count": null,
+   "id": "033237df-c8f4-4c07-b0ac-32c378bdcbbc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/tmskss/Development/rag-chatbot-demo/venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "from app import ChatBot, ChatBotConfig\n",
@@ -23,28 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6b0a5218",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "load_dotenv()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b31f59a2",
    "metadata": {},
    "outputs": [],
@@ -59,11 +39,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "0516de20",
+   "cell_type": "raw",
+   "id": "0ad8ae90-d100-4b9e-9f46-319b755e5a2e",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from langfuse.callback import CallbackHandler\n",
     "\n",
@@ -80,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a23c8785",
    "metadata": {},
    "outputs": [],
@@ -90,49 +68,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "88b70983",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running on local URL:  http://127.0.0.1:7860\n",
-      "Running on public URL: https://ae815ff8c221df64a9.gradio.componentsoft.ai\n",
-      "\n",
-      "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div><iframe src=\"https://ae815ff8c221df64a9.gradio.componentsoft.ai\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/tmskss/Development/rag-chatbot-demo/venv/lib/python3.10/site-packages/langchain_core/_api/beta_decorator.py:86: LangChainBetaWarning: The function `loads` is in beta. It is actively being worked on, so the API may change.\n",
-      "  warn_beta(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "import gradio as gr\n",
@@ -155,7 +94,7 @@
     "    question = question\n",
     "    # get chain\n",
     "    chain = ChatBot.get_chain(model_family=model_family, model=model)\n",
-    "    response = chain.invoke({\"question\": question}, config={\"configurable\": {\"user_id\": username, \"conversation_id\": session_id}} | trace)\n",
+    "    response = chain.invoke({\"question\": question}, config={\"configurable\": {\"user_id\": username, \"conversation_id\": session_id}})\n",
     "    chat_history = ChatBot.get_session_history(username, session_id)\n",
     "\n",
     "    history_pairs = []\n",
@@ -173,7 +112,7 @@
     "    # get chain\n",
     "    chain = ChatBot.get_chain(model_family=model_family, model=model)\n",
     "    chat_history = ChatBot.get_session_history(username, session_id)\n",
-    "    response = chain.stream({\"question\": question}, config={\"configurable\": {\"user_id\": username, \"conversation_id\": session_id}}| trace)\n",
+    "    response = chain.stream({\"question\": question}, config={\"configurable\": {\"user_id\": username, \"conversation_id\": session_id}})\n",
     "\n",
     "    history_pairs = []\n",
     "    for msg in chat_history.messages:\n",
@@ -197,8 +136,8 @@
     "    gr.Markdown(\"# Component Soft 5G RAG Demo\")\n",
     "    #system_prompt = gr.Textbox(label=\"System prompt\", value=\"You are a helpful, harmless and honest assistant.\")\n",
     "    with gr.Row():\n",
-    "        modelfamily = gr.Dropdown(list(modelfamilies_model_dict.keys()), label=\"Model family\", value=\"GPT\")\n",
-    "        model = gr.Dropdown(list(modelfamilies_model_dict[\"GPT\"]), label=\"Model\", value=\"gpt-3.5-turbo\")       \n",
+    "        modelfamily = gr.Dropdown(list(modelfamilies_model_dict.keys()), label=\"Model family\", value=\"Mistral\")\n",
+    "        model = gr.Dropdown(list(modelfamilies_model_dict[\"Mistral\"]), label=\"Model\", value=\"mistral-large\")       \n",
     "        \"\"\"temperature = gr.Slider(label=\"Temperature:\", minimum=0, maximum=2, value=1,\n",
     "            info=\"LLM generation temperature\")\n",
     "        max_tokens = gr.Slider(label=\"Max tokens\", minimum=100, maximum=2000, value=500, \n",
@@ -211,7 +150,7 @@
     "        submit_btn_nostreaming = gr.Button(\"Answer\")\n",
     "        submit_btn_streaming = gr.Button(\"Answer with streaming\")\n",
     "        clear_btn = gr.ClearButton([prompt, chatbot])\n",
-    "        #flag_btn = gr.Button(\"Flag\")\n",
+    "        flag_btn = gr.Button(\"Flag\")\n",
     "    \n",
     "    \n",
     "    @modelfamily.change(inputs=modelfamily, outputs=[model])\n",
@@ -223,18 +162,18 @@
     "    submit_btn_nostreaming.click(exec_prompt, inputs=[chatbot, prompt, session_id, modelfamily, model], outputs=[chatbot, prompt])\n",
     "    clear_btn.click(lambda session_id: ChatBot.del_session_history(username, session_id), [session_id], None, preprocess=False)\n",
     "\n",
-    "    #callback.setup([system_prompt, modelfamily, model, temperature, max_tokens, chatbot], \"flagged_data_points\")\n",
-    "    #flag_btn.click(lambda *args: callback.flag(args), [system_prompt, modelfamily, model, temperature, max_tokens, chatbot], None, preprocess=False)\n",
+    "    callback.setup([modelfamily, model, chatbot], \"flagged_data_points\")\n",
+    "    flag_btn.click(lambda *args: callback.flag(args), [modelfamily, model, chatbot], None, preprocess=False)\n",
     "    \n",
     "    gr.Examples(\n",
-    "        [\"What is 5G?\", \"What are the main adventages of 5G compared to 4G?\", \"What frequencies does 5G use?\", \"What is OFDMA?\", \n",
-    "         \"Which organisations are responsible for the standardization of 5G?\"],\n",
+    "        [\"What is 5G?\", \"What are the main adventages of 5G compared to 4G?\", \"What frequencies does 5G use?\",  \"Which organisations are responsible for the standardization of 5G?\", \n",
+    "         \"What is OFDMA?\", \"What is the difference between OFDMA and OFDM?\", \"What are the main components of 5G core networks?\", \"What were the design principles of Massive MTC?\"],\n",
     "        prompt\n",
     "    )\n",
     "\n",
     "#demo.launch()\n",
-    "demo.launch(share=True, share_server_address=\"gradio.componentsoft.ai:7000\", share_server_protocol=\"https\", auth=(\"Ericsson\", \"Torshamnsgatan21\"), max_threads=20, show_error=True, state_session_capacity=20)\n",
-    "#demo.launch(share=True, share_server_address=\"gradio.componentsoft.ai:7000\", share_server_protocol=\"https\", auth=(\"Ericsson\", \"Torshamnsgatan21\"), max_threads=20, show_error=True, favicon_path=\"/home/rconsole/GIT/AI-434/source/labfiles/data/favicon.ico\", state_session_capacity=20)\n"
+    "#demo.launch(share=True, share_server_address=\"gradio.componentsoft.ai:7000\", share_server_protocol=\"https\", auth=(\"Ericsson\", \"Torshamnsgatan21\"), max_threads=20, show_error=True, state_session_capacity=20)\n",
+    "demo.launch(share=True, share_server_address=\"gradio.componentsoft.ai:7000\", share_server_protocol=\"https\", auth=(\"Ericsson\", \"Torshamnsgatan21\"), max_threads=20, show_error=True, favicon_path=\"/home/rconsole/GIT/AI-434/source/labfiles/data/favicon.ico\", state_session_capacity=20)\n"
    ]
   },
   {
@@ -267,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
