--- a/Gradio_Langsmith_app.ipynb
+++ b/Gradio_Langsmith_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "033237df-c8f4-4c07-b0ac-32c378bdcbbc",
    "metadata": {},
    "outputs": [],
@@ -14,22 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "6b0a5218",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'LANGCHAIN_TRACING_V2' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m load_dotenv()\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mLANGCHAIN_TRACING_V2\u001b[49m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(LANGCHAIN_PROJECT)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(LANGCHAIN_ENDPOINT)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'LANGCHAIN_TRACING_V2' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "load_dotenv()"
    ]
@@ -45,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "8078bd7c-1ede-49d5-ac38-0326dd290484",
    "metadata": {},
    "outputs": [],
@@ -58,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a23c8785",
    "metadata": {},
    "outputs": [],
@@ -68,41 +56,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "88b70983",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running on local URL:  http://127.0.0.1:7862\n",
-      "Running on public URL: https://98bafa29894742aa62.gradio.componentsoft.ai\n",
-      "\n",
-      "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div><iframe src=\"https://98bafa29894742aa62.gradio.componentsoft.ai\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "import gradio as gr\n",
@@ -197,7 +154,7 @@
     "    flag_btn.click(lambda *args: callback.flag(args), [modelfamily, model, chatbot], None, preprocess=False)\n",
     "    \n",
     "    gr.Examples(\n",
-    "        [\"What is 5G?\", \"What are the main adventages of 5G compared to 4G?\", \"What frequencies does 5G use?\",  \"Which organisations are responsible for the standardization of 5G?\", \n",
+    "        [\"What is 5G?\", \"What are its main adventages compared to 4G?\", \"What frequencies does it use?\",  \"Which organisations are responsible for its standardization?\", \n",
     "         \"What is OFDMA?\", \"What is the difference between OFDMA and OFDM?\", \"What are the main components of 5G core networks?\", \"What were the design principles of Massive MTC?\"],\n",
     "        prompt\n",
     "    )\n",
