--- a/mercedes/MB_Gradio_app.ipynb
+++ b/mercedes/MB_Gradio_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "033237df-c8f4-4c07-b0ac-32c378bdcbbc",
    "metadata": {},
    "outputs": [],
@@ -14,28 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6b0a5218",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "load_dotenv()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a23c8785",
    "metadata": {},
    "outputs": [],
@@ -45,41 +34,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "88b70983",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running on local URL:  http://127.0.0.1:7860\n",
-      "Running on public URL: https://7f707db3b3f00e702d.gradio.componentsoft.ai\n",
-      "\n",
-      "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div><iframe src=\"https://7f707db3b3f00e702d.gradio.componentsoft.ai\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "import gradio as gr\n",
@@ -141,7 +99,7 @@
     "\n",
     "with gr.Blocks(title=\"CompSoft\") as demo:\n",
     "    session_id = gr.Textbox(value = uuid.uuid4, interactive=False, visible=False)\n",
-    "    gr.Markdown(\"# Mercedes 5G RAG Demo\")\n",
+    "    gr.Markdown(\"# Mercedes RAG Demo\")\n",
     "    #system_prompt = gr.Textbox(label=\"System prompt\", value=\"You are a helpful, harmless and honest assistant.\")\n",
     "    with gr.Row():\n",
     "        modelfamily = gr.Dropdown(list(modelfamilies_model_dict.keys()), label=\"Model family\", value=\"Mistral\")\n",
