--- a/mercedes/MB_Gradio_app.ipynb
+++ b/mercedes/MB_Gradio_app.ipynb
@@ -42,7 +42,7 @@
     "import random\n",
     "import gradio as gr\n",
     "\n",
-    "username = \"Ericsson\"\n",
+    "username = \"Mercedes\"\n",
     "\n",
     "modelfamilies_model_dict = {\n",
     "    \"GPT\": get_args(ChatBotConfig.OPENAI_MODELS),\n",
