--- a/mercedes/MB_Gradio_app.ipynb
+++ b/mercedes/MB_Gradio_app.ipynb
@@ -58,6 +58,7 @@
     "def exec_prompt(chatbot, question, session_id, model_family = \"Mistral\", model=\"mistral-large\"):\n",
     "\n",
     "    question = question\n",
+    "    if question == \"\": question = \"I have no question\"\n",
     "    # get chain\n",
     "    chain = ChatBot.get_chain(model_family=model_family, model=model)\n",
     "    response = chain.invoke({\"question\": question}, config={\"configurable\": {\"user_id\": username, \"conversation_id\": session_id}})\n",
@@ -75,6 +76,7 @@
     "def exec_prompt_streaming(chatbot, question, session_id, model_family = \"Mistral\", model=\"mistral-large\"):\n",
     "\n",
     "    question = question\n",
+    "    if question == \"\": question = \"I have no question\"\n",
     "    # get chain\n",
     "    chain = ChatBot.get_chain(model_family=model_family, model=model)\n",
     "    chat_history = ChatBot.get_session_history(username, session_id)\n",
