adding nokia & magyartelekom apps

--- a/nokia/Nokia_Gradio_RAG_app.ipynb
+++ b/nokia/Nokia_Gradio_RAG_app.ipynb
@@ -23,45 +23,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "6bc838bf-b74d-458f-8b55-c5daa7e3b241",
-   "metadata": {},
-   "source": [
-    "# ! pip install langfuse\n",
-    "\n",
-    "from langfuse import Langfuse\n",
-    "\n",
-    "langfuse_handler = Langfuse(\n",
-    "  secret_key=\"sk-lf-76c2efa1-fd51-4cdf-8429-1397b958b4b2\",\n",
-    "  public_key=\"pk-lf-013f7196-3618-41c0-84dd-d8133bd80214\",\n",
-    "  host=\"https://cloud.langfuse.com\"\n",
-    ")\n",
-    "\n",
-    "langfuse_handler.auth_check()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bba651e7-4b4a-4e09-bcfb-1a8f14d3df2e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langfuse.callback import CallbackHandler\n",
-    "\n",
-    "trace = {\n",
-    "        \"callbacks\": [\n",
-    "            CallbackHandler(\n",
-    "                secret_key=\"sk-lf-76c2efa1-fd51-4cdf-8429-1397b958b4b2\",\n",
-    "                  public_key=\"pk-lf-013f7196-3618-41c0-84dd-d8133bd80214\",\n",
-    "                  host=\"https://cloud.langfuse.com\",\n",
-    "                  trace_name=\"Mercedes RAG\"\n",
-    "            )\n",
-    "        ]\n",
-    "    }"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a23c8785",
@@ -81,7 +42,7 @@
     "import random\n",
     "import gradio as gr\n",
     "\n",
-    "username = \"Ericsson\"\n",
+    "username = \"Nokia\"\n",
     "\n",
     "modelfamilies_model_dict = {\n",
     "    \"GPT\": get_args(ChatBotConfig.OPENAI_MODELS),\n",
@@ -97,9 +58,10 @@
     "def exec_prompt(chatbot, question, session_id, model_family = \"Mistral\", model=\"mistral-large\"):\n",
     "\n",
     "    question = question\n",
+    "    if question == \"\": question = \"I have no question\"\n",
     "    # get chain\n",
     "    chain = ChatBot.get_chain(model_family=model_family, model=model)\n",
-    "    response = chain.invoke({\"question\": question}, config={\"configurable\": {\"user_id\": username, \"conversation_id\": session_id}} | trace)\n",
+    "    response = chain.invoke({\"question\": question}, config={\"configurable\": {\"user_id\": username, \"conversation_id\": session_id}})\n",
     "    chat_history = ChatBot.get_session_history(username, session_id)\n",
     "\n",
     "    history_pairs = []\n",
@@ -114,10 +76,11 @@
     "def exec_prompt_streaming(chatbot, question, session_id, model_family = \"Mistral\", model=\"mistral-large\"):\n",
     "\n",
     "    question = question\n",
+    "    if question == \"\": question = \"I have no question\"\n",
     "    # get chain\n",
     "    chain = ChatBot.get_chain(model_family=model_family, model=model)\n",
     "    chat_history = ChatBot.get_session_history(username, session_id)\n",
-    "    response = chain.stream({\"question\": question}, config={\"configurable\": {\"user_id\": username, \"conversation_id\": session_id}} | trace)\n",
+    "    response = chain.stream({\"question\": question}, config={\"configurable\": {\"user_id\": username, \"conversation_id\": session_id}})\n",
     "\n",
     "    history_pairs = []\n",
     "    for msg in chat_history.messages:\n",
@@ -136,9 +99,9 @@
     "\n",
     "callback = gr.CSVLogger()\n",
     "\n",
-    "with gr.Blocks(title=\"LangFuse\") as demo:\n",
+    "with gr.Blocks(title=\"CompSoft\") as demo:\n",
     "    session_id = gr.Textbox(value = uuid.uuid4, interactive=False, visible=False)\n",
-    "    gr.Markdown(\"# Mercedes RAG Demo with Langfuse\")\n",
+    "    gr.Markdown(\"# Nokia 5G RAG Demo\")\n",
     "    #system_prompt = gr.Textbox(label=\"System prompt\", value=\"You are a helpful, harmless and honest assistant.\")\n",
     "    with gr.Row():\n",
     "        modelfamily = gr.Dropdown(list(modelfamilies_model_dict.keys()), label=\"Model family\", value=\"Mistral\")\n",
@@ -148,7 +111,7 @@
     "        max_tokens = gr.Slider(label=\"Max tokens\", minimum=100, maximum=2000, value=500, \n",
     "            info=\"Maximum number of generated tokens\")\"\"\"\n",
     "    with gr.Row():\n",
-    "        chatbot=gr.Chatbot(label=\"Mercedes_RAG\", height=400, show_copy_button=True)\n",
+    "        chatbot=gr.Chatbot(label=\"ComponentSoft_5G_RAG\", height=400, show_copy_button=True)\n",
     "    with gr.Row():\n",
     "        prompt = gr.Textbox(label=\"Question\", value=\"What is 5G?\")\n",
     "    with gr.Row():\n",
@@ -178,7 +141,7 @@
     "\n",
     "#demo.launch()\n",
     "#demo.launch(share=True, share_server_address=\"gradio.componentsoft.ai:7000\", share_server_protocol=\"https\", auth=(\"Ericsson\", \"Torshamnsgatan21\"), max_threads=20, show_error=True, state_session_capacity=20)\n",
-    "demo.launch(share=True, share_server_address=\"gradio.componentsoft.ai:7000\", share_server_protocol=\"https\", auth=(\"Ericsson\", \"Torshamnsgatan21\"), max_threads=20, show_error=True, favicon_path=\"data/favicon.ico\", state_session_capacity=20)\n"
+    "demo.launch(share=True, share_server_address=\"gradio.componentsoft.ai:7000\", share_server_protocol=\"https\", auth=(\"Nokia\", \"Karakaari7\"), max_threads=20, show_error=True, favicon_path=\"data/favicon.ico\", state_session_capacity=20)\n"
    ]
   },
   {
