feat: untracked the chroma db instances

--- a/compsoft/Compsoft_Gradio_RAG_app.ipynb
+++ b/compsoft/Compsoft_Gradio_RAG_app.ipynb
@@ -55,12 +55,12 @@
     "max_tokens = []\n",
     "ChatBot.store = {}\n",
     "\n",
-    "def exec_prompt(chatbot, question, session_id, model_family = \"Mistral\", model=\"mistral-large\"):\n",
+    "def exec_prompt(chatbot, question, session_id, model_family = \"Mistral\", model_type=\"mistral-large\"):\n",
     "\n",
     "    question = question\n",
     "    if question == \"\": question = \"I have no question\"\n",
     "    # get chain\n",
-    "    chain = ChatBot.get_chain(model_family=model_family, model=model)\n",
+    "    chain = ChatBot.get_chain(model_family=model_family, model_type=model_type)\n",
     "    response = chain.invoke({\"question\": question}, config={\"configurable\": {\"user_id\": username, \"conversation_id\": session_id}})\n",
     "    chat_history = ChatBot.get_session_history(username, session_id)\n",
     "\n",
@@ -73,12 +73,12 @@
     "\n",
     "    return history_pairs, \"\" \n",
     "\n",
-    "def exec_prompt_streaming(chatbot, question, session_id, model_family = \"Mistral\", model=\"mistral-large\"):\n",
+    "def exec_prompt_streaming(chatbot, question, session_id, model_family = \"Mistral\", model_type=\"mistral-large\"):\n",
     "\n",
     "    question = question\n",
     "    if question == \"\": question = \"I have no question\"\n",
     "    # get chain\n",
-    "    chain = ChatBot.get_chain(model_family=model_family, model=model)\n",
+    "    chain = ChatBot.get_chain(model_family=model_family, model_type=model_type)\n",
     "    chat_history = ChatBot.get_session_history(username, session_id)\n",
     "    response = chain.stream({\"question\": question}, config={\"configurable\": {\"user_id\": username, \"conversation_id\": session_id}})\n",
     "\n",
@@ -105,7 +105,7 @@
     "    #system_prompt = gr.Textbox(label=\"System prompt\", value=\"You are a helpful, harmless and honest assistant.\")\n",
     "    with gr.Row():\n",
     "        modelfamily = gr.Dropdown(list(modelfamilies_model_dict.keys()), label=\"Model family\", value=\"Mistral\")\n",
-    "        model = gr.Dropdown(list(modelfamilies_model_dict[\"Mistral\"]), label=\"Model\", value=\"mistral-large\")       \n",
+    "        model_type = gr.Dropdown(list(modelfamilies_model_dict[\"Mistral\"]), label=\"Model\", value=\"mistral-large\")       \n",
     "        \"\"\"temperature = gr.Slider(label=\"Temperature:\", minimum=0, maximum=2, value=1,\n",
     "            info=\"LLM generation temperature\")\n",
     "        max_tokens = gr.Slider(label=\"Max tokens\", minimum=100, maximum=2000, value=500, \n",
@@ -121,17 +121,17 @@
     "        flag_btn = gr.Button(\"Flag\")\n",
     "    \n",
     "    \n",
-    "    @modelfamily.change(inputs=modelfamily, outputs=[model])\n",
+    "    @modelfamily.change(inputs=modelfamily, outputs=[model_type])\n",
     "    def update_modelfamily(modelfamily):\n",
-    "        model = list(modelfamilies_model_dict[modelfamily])\n",
-    "        return gr.Dropdown(choices=model, value=model[0], interactive=True)\n",
+    "        model_type = list(modelfamilies_model_dict[modelfamily])\n",
+    "        return gr.Dropdown(choices=model_type, value=model_type[0], interactive=True)\n",
     "\n",
-    "    submit_btn_streaming.click(exec_prompt_streaming, inputs=[chatbot, prompt, session_id, modelfamily, model], outputs=[chatbot, prompt])\n",
-    "    submit_btn_nostreaming.click(exec_prompt, inputs=[chatbot, prompt, session_id, modelfamily, model], outputs=[chatbot, prompt])\n",
+    "    submit_btn_streaming.click(exec_prompt_streaming, inputs=[chatbot, prompt, session_id, modelfamily, model_type], outputs=[chatbot, prompt])\n",
+    "    submit_btn_nostreaming.click(exec_prompt, inputs=[chatbot, prompt, session_id, modelfamily, model_type], outputs=[chatbot, prompt])\n",
     "    clear_btn.click(lambda session_id: ChatBot.del_session_history(username, session_id), [session_id], None, preprocess=False)\n",
     "\n",
-    "    callback.setup([modelfamily, model, chatbot], \"flagged_data_points\")\n",
-    "    flag_btn.click(lambda *args: callback.flag(args), [modelfamily, model, chatbot], None, preprocess=False)\n",
+    "    callback.setup([modelfamily, model_type, chatbot], \"flagged_data_points\")\n",
+    "    flag_btn.click(lambda *args: callback.flag(args), [modelfamily, model_type, chatbot], None, preprocess=False)\n",
     "    \n",
     "    gr.Examples(\n",
     "        [\"What is 5G?\", \"What are its main adventages compared to 4G?\", \"What frequencies does it use?\",  \"Which organisations are responsible for its standardization?\", \n",
